--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>To DO LIST </title>
 </head><body>  
     <div class="container"> <br>
+        <main>
     <h1 class="tag">TO DO LIST APP</h1>
-   
+   <div id="input">
     <input id="pushnew" class="text" type="text" /> 
     <input id="date-picker" class="date" type="Date"/><br>
+</div>
     <button onclick="doto()" class="click">To-Do</button>  <br><br>
-<div id="to-do-list"></div> </div>
+<div id="to-do-list"></div> </main></div>
 </body> 
 <script src="main.js"></script>
 
